k8s/app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: app
          image: <your_account_id>.dkr.ecr.us-west-2.amazonaws.com/my-app:latest
          ports:
            - containerPort: 8080
